VP 10.6.0 Changelog
------------------------

- optimize .obj importer

- add object space-normal mapping support to primitive (our implementation matches the object space, +X +Y +Z, export/baking settings in Blender)
  Object space-normal maps are commonly used if one reduces polygon counts of a complex model. The lost geometric details are then added back via a normal map

- fix some potential problems with balls and rubbers outside of the playfield range, and when importing certain primitive meshes via .obj

- show kicker (default) orientation in the editor

- support 'Add Point' hotkey (F10 normal and F11 for smooth point) for rubbers

- fix lighting of the reflection of the playfield on the ball (before it was more or less ignoring the real lightsources and using a wrong lookup from the environment)

- increase robustness (and reduce temporary memory used) when handling very large images/textures

- add rothbauerw's and cyberpez' ball dropping sound code to builtin example tables

- add proper dithering to final output buffer (most noticable on gradients and/or low-quality/cheaper output monitors)

- remove caption and window borders in windowed mode (only re-enable/toggle that caption if the 'ESC'/Pause-menu is brought up so that one can move the window around after unpausing again)
- save position of the windowed mode player window

- fix some issues with the physically based lighting calculations, this can change the brightness (most noticably on the playfield) for some tables (more so if the (HDR) environment map is very high contrast, especially on the poles)

- add current active ball velocity/angular velocity, and the number of physics iterations per frame to the F11 debug output/stats

- fix some potential crashes and quirks in the manager dialogs (most notably the alpha test value in the image manager being copied to other elements when deleting an image)

- fix crashes if a POV file is broken/invalid
